# gemini-s2s

./: .env.example  README.md  agent_cascaded.py  agent_native.py  metrics_observer.py  pyproject.toml
dashboard/: index.html
gemini_s2s.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: make_call.py
